# fluvio-community

./: README.md
bus-demo/: README.md
bus-demo/helsinki/: README.md  average.yaml  cat.yaml  clean.sh  conn-hsk.yaml  create-mqtt-helsinki.sh  h-all.bash  jolt.yaml  regex-jolt-average.yaml  regex-jolt.yaml  regex.yaml  setup.sh  t-regex-jolt.sh  t-regex.sh  t.sh  t.yaml  useless.yaml
bus-demo/helsinki/stat/: Cargo.toml  README.md  SmartModule.toml  load.sh  test.json  test.sh
bus-demo/helsinki/stat/src/: lib.rs
sql2fluvio/: Cargo.toml  Makefile  README.md  justfile  test.sql  test2.sql
sql2fluvio/src/: main.rs
sql2fluvio/tests/: gen-test-db.sql  smoke.rs  smoke.sql  smoke2.sql  test.db
streaming-chart/: Cargo.toml  README.md  csvgen.py  justfile  sine_wave.csv
streaming-chart/files/: page-echarts.html
streaming-chart/src/: main.rs
streaming-chart/src/routes/: chart.rs  mod.rs  ws.rs
