[package]
name = "sql2fluvio"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive"] }
fluvio = { version = "0.22.3", features = ["rustls"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt", "rt-multi-thread", "tracing"] }
tokio-rusqlite = "0.5.1"

[dev-dependencies]
assert_cmd = "2.0.14"

