[package]
name = "streaming-chart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
fluvio = { version = "0", default-features = false }
futures-util = "0.3.28"
poem = { version = "3.0.1", features = ["embed", "websocket"] }
rust-embed = "8.4.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
